<resources>
    <string name="app_name">OrderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="chungminhthu">Chứng minh thư</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">ĐĂNG KÝ</string>
    <string name="nhaptendangnhap">Mời bạn nhập tên đăng nhập!</string>
    <string name="nhapmatkhau">Mời bạn nhập mật khẩu!</string>
    <string name="themthanhcong">Thêm thành công!</string>
    <string name="tennhanvien">Tên nhân viên</string>
    <string name="nhaptennhanvien">Mời bạn nhập tên nhân viên</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangnhapthanhcong">Đăng nhập thành công</string>
    <string name="dangnhapthatbai">Đăng nhập thất bại</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="logout">Log out</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="nhaptenbanan">Nhập tên bàn ăn</string>
    <string name="themthatbai">Thất bại!</string>
    <string name="huy">Hủy</string>
    <string name="cancel">Bàn ăn chưa được lưu</string>
    <string name="themmonan">Thêm món ăn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="themloaithucdon">Thêm loại thực đơn</string>
    <string name="them">Thêm</string>
    <string name="nhaptenloaithucdon">Nhập loại thực đơn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="chonhinh">Chọn hình thực đơn</string>
    <string name="nhaptenmonan">Mời nhập tên món ăn!</string>
    <string name="nhapgiatien">Mời nhập giá tiền!</string>
    <string name="tenloaimonan">Tên loại món ăn</string>
    <string name="soluong">Số lượng</string>
    <string name="tongtien">Tổng tiền: </string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="dathanhtoan">Đã thanh toán</string>
    <string name="thanhtoanthatbai">Thanh toán thất bại</string>
    <string name="suabanan">Sửa bàn ăn</string>
    <string name="suathanhcong">Sửa thành công</string>
    <string name="suathatbai">Sửa thất bại</string>
    <string name="xoathanhcong">Xóa thành công</string>
    <string name="xoathatbai">Xóa thất bại</string>
    <string name="sualoai">Sửa loại</string>
    <string name="suamonan">Sửa món ăn</string>
    <string name="danhsachnhanvien">DANH SÁCH NHÂN VIÊN</string>
    <string name="cmnd">Số CMND</string>
    <string name="gioitinh">Giới tính</string>
    <string name="themnhanvien">Thêm nhân viên</string>
    <string name="suanhanvien">Sửa nhân viên</string>
    <string name="capnhat">Cập nhật</string>
    <string name="capnhatthanhcong">Cập nhật thành công</string>
    <string name="capnhatthatbai">Cập nhật thất bại</string>
    <string name="quyen">Quyền</string>
    <string name="ngaythanhtoan">Ngày thanh toán</string>
    <string name="sothutu">STT</string>
    <string name="thanhcong">Thành công</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="goimon">Mời gọi món ăn!</string>
</resources>
